# rust-api

./: Cargo.toml
.github/workflows/: ci.yml
src/: main.rs  metrics.rs
src/authentication/: jwt.rs
src/errors/: handlers.rs  tests.rs
src/helpers/: response.rs
